# open-ontologies

./: .dockerignore  .env  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DISSERTATION.md  DX_QOL_FIXES_SUMMARY.md  Dockerfile  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  THESIS.md  audit.json  cell8-final-assertion-report.ttl  config.example.toml  final_proof.txt  ggen-revops.toml  ggen-zoela-mobile.toml  ggen.toml  glama.json  package.json  summary-only-receipt.json  test_const_match  tsconfig.json
.antigravitycli/: e07a5f49-309f-471e-9f2d-de59efede6b7.json
.cargo/: audit.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: config_change_auditor.sh  post_tool_use_emitter.sh  pre_tool_use_guard.sh  session-start.sh  stop_release_gate.sh  user-prompt.sh
.claude/rules/: cell8-conformance.md  coding-agent-mistakes.md  ggen-pipeline.md  mcp-server.md  otel-validation.md
.claude/skills/: cell8-gates.md  ggen-codegen.md  mcp-server-tools.md  oxigraph-patterns.md  rdf-ontology.md  shacl-validation.md  sparql-construct.md
.ggen/keys/: signing.key  verifying.key
.ggen/proof-receipts/: cli-spec.json  onto-cli.json
.ggen/receipts/: latest.json  sync-20260506-045014.json  sync-20260506-045213.json  sync-20260512-213709.json  sync-20260512-213752.json  sync-20260512-213823.json  sync-20260512-213919.json  sync-20260513-000054.json  sync-20260513-000227.json  sync-20260513-001126.json  sync-20260513-063059.json  sync-20260513-063409.json  sync-20260513-070036.json  sync-20260513-070754.json  sync-20260513-212526.json  sync-20260513-212739.json  sync-20260518-052707.json  (+123 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.mcp/: server.json
benches/: README.md  admission_bench.rs  baseline.json  manufacturing_bench.rs  receipts_bench.rs  swarm_bench.rs
benchmark/: BORO_COMPARISON.md  PIZZA_COMPARISON.md  boro_compare.py  compare.py  extension_compare.py  marketplace_benchmark.py  marketplace_benchmark.sh  marketplace_results.json  pizza_compare.py  pizza_extend_compare.py  pizza_results.json
cell8-ggen/: ggen.toml
data/: crosswalks.parquet
deploy/: README.md
docker/: config.toml  docker-compose.yml
docs/: 00-overview.md  01-architecture.md  02-quickstart.md  03-mcp-tools.md  04-defect-taxonomy.md  05-receipt-chain.md  06-llm-boundary.md  07-phase-history.md  08-running-tests.md  09-troubleshooting.md  10-operational-personas.md  C4_ARCHITECTURE.md  README.md  THESIS.md  THESIS_V2.md  alignment.md  benchmarks.md  cache-and-registry.md  capabilities-report-truex.md  clinical.md  data-pipeline.md  embeddings.md  ghf-proof-matrix.md  ghf-readme.md  ies-alignment.md  ies-ecosystem.md  ies-examples.md  lifecycle.md  quickstart.md  reasoning.md  truex-ecosystem.md  weekly-ledger-template.md
examples/: met-sample-after-baseline.json  met-sample-before.json
ontology/: aat-live-rules.ttl  alignment-notes.md  attestation-shapes.ttl  cell8-core.ttl  cell8-manufacturing.ttl  cell8-profile.ttl  cell8-shapes.ttl  cli-open-ontologies.ttl  ghf-core.ttl  ghf-security-policy.ttl  ghf-shacl.ttl  mcpp-proof-chain.ttl  ontostar-wasm4pm-integration.ttl  portfolio-os.ttl  powl-process-mining.ttl  public-alignment.ttl  public-shapes.ttl  requirements-shapes.ttl  requirements.ttl  revops-manufacturing.ttl  shared-receipt-shapes.ttl  thesis-manufacturing.ttl  thesis-shapes.ttl  truex-ecosystem.ttl
receipts/: manufacture-receipt.json
schemas/: truex-receipt.v1.schema.json
scripts/: build_autoreceipt_artifacts.py  build_autoreceipt_pipeline.py  build_crosswalks.py  collect-github-evidence.sh  ctq_from_voice.py  executive_projection.py  gh-create-issue.sh  gh-create-pr.sh  groq_status.py  manufacture_cli.py  powl_from_text.py  powl_refine.py  simulate_stakeholder.py  spec_from_ctq.py  verify-setup.sh
src/: actuation.rs  admission.rs  align.rs  attestation.rs  autoreceipt.rs  autoreceipt_law.rs  batch.rs  bootstrap.rs  cache.rs  cell8.rs  cell_ready.rs  clinical.rs  config.rs  defects.rs  drift.rs  embed.rs  embed_remote.rs  enforce.rs  error.rs  feedback.rs  ghf.rs  graph.rs  guide.rs  health_guardian.rs  ingest.rs  inputs.rs  lib.rs  lineage.rs  llm_input.rs  llm_translator.rs  main.rs  mapping.rs  marketplace.rs  mcpp_gate.rs  monitor.rs  ocel_manufacturer.rs  ocel_store.rs  ontology.rs  plan.rs  poincare.rs  (+30 more)
studio/: README.md  index.html  package-lock.json  package.json  vite.config.ts
supabase/: config.toml
tests/: a2a_handler_test.rs  aat_mcp_tools_comprehensive.rs  admin_principals_cache_immune.rs  admin_tools_e2e.rs  admission.rs  admission_real_replay.rs  adversarial_emit_bundle.rs  adversarial_jtbd_test.rs  adversarial_real_toolchains.rs  autoreceipt_smoke_synthetic_test.rs  bootstrap_lock_persists.rs  builtin_catalog_parses.rs  bypass_response_shape_unified.rs  cache_management_test.rs  capability_rollup.rs  care_followup_test.rs  cell8_thirteen_gates.rs  cell_ready_a11_deny_path.rs  cell_ready_a12_deny_path.rs  cell_ready_a13_deny_path.rs  cell_ready_a9_deny_path.rs  cell_ready_bootstrap_chain_gate.rs  cell_ready_deny_paths.rs  cli_test.rs  clinical_test.rs  conformance_check_real.rs  counterfactual_binding.rs  dead_param_gate_test.rs  derive_allowlist_audit.rs  drift_test.rs  duckdb_test.rs  ed25519_attestation.rs  embed_test.rs  embedding_e2e_test.rs  end_to_end_governed_release.rs  enforce_test.rs  extend_handler.rs  extend_integration_test.rs  external_verifier_e2e.rs  feedback.rs  (+107 more)
tools/: assert-no-generated-dir.sh  check-test-count.sh  check-test-removal-tag.sh  dead-param-gate.sh  emit-earl-report.py  p0a-emit-receipt.py  p0a-extraction-diagnostics.py  untrack-secret.sh  validate-autonomics.sh  validate-connect-groups.sh  validate-functions.sh  validate-namespace-singularity.sh  validate-no-downstream-authority.sh  validate-ocel.sh  validate-public-anchor-closure.sh  validate-realtime.sh  validate-receipts.sh  validate-rls-policy-coverage.sh  validate-rls.sh  validate-storage.sh  validate-supabase-local.sh  verify-receipts.sh
(+1610 files in other folders)
