[package]
name = "open-ontologies"
version = "0.1.11"
edition = "2024"
description = "AI-native ontology engine — standalone MCP server"
license = "MIT"
repository = "https://github.com/fabio-rovai/open-ontologies"

[[bin]]
name = "open-ontologies"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
oxigraph = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
clap-noun-verb = "5"
clap-noun-verb-macros = "5"
linkme = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"
rayon = "1.10"
csv = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
serde_yaml = "0.9"
calamine = "0.26"
arrow = { version = "54", default-features = false, features = ["csv", "json"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"], optional = true }
duckdb = { version = "1", optional = true, features = ["bundled"] }
tract-onnx = { version = "0.21", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
dirs = "6"
shell-words = "1"
wasm4pm-types = { path = "/Users/sac/wasm4pm/crates/wasm4pm-types", features = ["import"] }
wasm4pm-algos = { path = "/Users/sac/wasm4pm/crates/wasm4pm-algos" }
wasm4pm = { path = "/Users/sac/wasm4pm/wasm4pm", default-features = false, features = ["powl", "conformance_basic", "hand_rolled_stats", "streaming_basic", "discovery_advanced", "ml"] }
wasm4pm-cognition = { path = "/Users/sac/wasm4pm/crates/wasm4pm-cognition", default-features = false }
blake3 = "1"
ulid = "1"
dotenvy = "0.15"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
rand_core = "0.6"
arc-swap = "1"

[features]
default = []
postgres = ["sqlx"]
duckdb = ["dep:duckdb"]
sql = ["postgres", "duckdb"]
embeddings = ["tract-onnx", "tokenizers"]

[lints.clippy]
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "admission_bench"
harness = false

[[bench]]
name = "manufacturing_bench"
harness = false

[[bench]]
name = "swarm_bench"
harness = false

[[bench]]
name = "receipts_bench"
harness = false
